# dab_project

./: .coveragerc  .databricksignore  .gitignore  .yamllint.yml  README.md  databricks.yml  pyproject.toml  requirements_dbc.txt  requirements_pyspark.txt  requiremnts_dbc.txt  requiremnts_pyspark.txt  setup.py
.github/workflows/: cd-workflow.yml  ci-workflow.yml  main.yml
dbt_gold/: .user.yml  dbt_project.yml  profiles.yml
dbt_gold/macros/: test_accepted_values_case_insensitive.sql
dbt_gold/snapshots/: dim_player.yml  dim_tag.yml  dim_userlimit.yml
dbt_gold/tests/: assert_fact_gameround_ggr_matches_derived_formula.sql  assert_fact_payments_amount_not_negative.sql  assert_no_future_dates_in_fact_payments.sql
docs/: citibike_project_diagram.drawio
resources/jobs/: demo_job.yml  igaming_gold_daily_orchestrator_job.yml  igaming_gold_dims_job.yml  igaming_gold_facts_job.yml  igaming_gold_hourly_orchestrator_job.yml  igaming_gold_marts_pc_job.yml  igaming_gold_snapshots_job.yml  tma_gold_daily_orchestrator_job.yml  tma_gold_dims_job.yml  tma_gold_facts_job.yml  tma_gold_hourly_orchestrator_job.yml  tma_gold_marts_pc_job.yml  tma_gold_snapshots_job.yml
resources/pipelines/: citibike_etl_pipeline_dlt_job.yml  citibike_etl_pipeline_nb_job.yml  citibike_etl_pipeline_py_job.yml  igaming_medallion_pipeline_job.yml  tma_medallion_pipeline_job.yml
src/citibike/: citibike_utils.py
src/dab_project/: main.py
tests/: conftest.py  test_citibike_catalog_integration.py  test_citibike_interview_scenarios.py  test_citibike_scenarios.py  test_table_schemas.py
(+37 files in other folders)
