[project]
name = "dab_project"
version = "0.0.7"
authors = [{ name = "jharaghwendra@gmail.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
    "dbt-core>=1.11.11",
    "dbt-databricks>=1.10.9",
]
ci = [
    "pyspark==4.1.2",
    "pyarrow==24.0.0",
    "pandas==3.0.3",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[project.scripts]
main = "dab_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citibike", "src/utils", "src/gaming_lakehouse"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
